2018-03-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix --reserve-regs-iy issue in function pointers to functions returning long long.

2018-03-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCralloc.hpp:
	  Fix --dump-graphs debug output for non-connected live-ranges.
	* src/SDCClrange.c,
	  src/SDCCopt.c:
	  Fix non-connected live-ranges, bugs #2525, #2644, #2266, #2319.

2018-03-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-1981238.c,
	  support/regression/tests/gcc-torture-execute-20141107-1.c,
	  support/regression/tests/gcc-torture-execute-920711-1.c: Test for
	  __POWERPC__ instead of __PPC__

2018-03-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-1981238.c,
	  support/regression/tests/gcc-torture-execute-20141107-1.c,
	  support/regression/tests/gcc-torture-execute-920711-1.c: Disable
	  tests failing on PPC host
	* support/regression/tests/gcc-torture-execute-20121108-1.c,
	  support/regression/tests/gcc-torture-execute-pr79286.c: Don't
	  define putchar when compiling for host

2018-03-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-1981238.c: disabled new tests that fail on
	  host

2018-03-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCopt.c,
	  support/regression/tests/bug-2712.c:
	  Fix bug #2712.

2018-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/stm8/gen.c (emitCall): fix callf with literal
	* support/regression/tests/bug-1981238.c: added tests,
	  changed pad.b to 5 bits so the total is <= 8
	* support/regression/tests/memory.c: enabled test for ds390, mcs51-large
	  and mcs51-huge
	* device/lib/strtoul.c: fix warnings

2018-03-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c:
	  Fix bug #2714.

2018-03-04 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/stm8.cc: